--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "analiza-sync": "^1.0.1"
+    "analiza-sync": "^1.0.1",
+    "readline-sync": "^1.4.10"
   }
 }
